Fixed long list title wrapping and overflowing

--- a/css/lists.less
+++ b/css/lists.less
@@ -19,6 +19,7 @@
   padding: 0 @list-item-height 0 5px;
   border-bottom: 1px solid gray;
   font-size: large;
+  white-space: nowrap;
   cursor: pointer;
 }
 
@@ -26,18 +27,26 @@
   background: #EFEFEF;
 }
 
+.nt-list-item-with-icon {
+  padding-left: @list-item-icon-height + 5px * 2;
+}
+
 .nt-list-item-icon {
   display: inline-block;
+  position: absolute;
   width: @list-item-icon-height;
   height: @list-item-icon-height;
-  margin: ((@list-item-height - @list-item-icon-height) / 2) 5px ((@list-item-height - @list-item-icon-height) / 2) 0;
-  float: left;
+  margin: ((@list-item-height - @list-item-icon-height) / 2) 5px ((@list-item-height - @list-item-icon-height) / 2);
+  left: 0;
 }
 
 .nt-list-item-title {
   display: inline-block;
+  max-width: 100%;
   float: left;
+  overflow: hidden;
   line-height: @list-item-height;
+  text-overflow: ellipsis;
 }
 
 .nt-list-item-checkbox {
